# parking-rust

./: .gitignore  distances.json
.unotes/: unotes_meta.json
parking/: Cargo.toml
parking/src/: .config.json  Data.rs  Sorter.rs  Student.rs  main.rs  sorter.rs
