[package]
name = "parking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
sheets = "0.3.1"
google-sheets4 = "*"
serde = "^1.0"
serde_json = "^1.0"
hyper = "*"
hyper-rustls = "0.23.0"
futures = "0.3"
tokio = {version = "1.19.2", features = ["full"] }
